Bug 202081 - Button 'Read More Info About This Contact' does nothing
Summary: Button 'Read More Info About This Contact' does nothing
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Main Application (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-31 14:24 UTC by Vsevolod Krishchenko
Modified: 2010-01-10 22:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Button 'Read More Info About This Contact' is useless (56.11 KB, image/png)
2009-07-31 14:27 UTC, Vsevolod Krishchenko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vsevolod Krishchenko 2009-07-31 14:24:54 UTC
Version:            (using KDE 4.2.4)
OS:                Linux
Installed from:    Ubuntu Packages

Pressing Read More Info About This Contact' button has no effect at all.

How to reproduce:

1. Some other ICQ contact should add your to his contact list.

2. Press 'Add...' link

3. 'Someone Has Added You' window appears.

4. Press 'Read More Info About This Contact' button

5. Result: no effect at all.

Expected result: 'ICQ User Information' window has appear.

Screenshot to follow.
Comment 1 Vsevolod Krishchenko 2009-07-31 14:27:24 UTC
Created attachment 35752 [details]
Button 'Read More Info About This Contact' is useless
Comment 2 Roman Jarosz 2010-01-10 19:34:50 UTC
SVN commit 1072688 by rjarosz:

Fix bug 202081 - Button 'Read More Info About This Contact' does nothing

BUG: 202081



 M  +1 -0      kopeteaddedinfoevent.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1072688
Comment 3 Roman Jarosz 2010-01-10 22:42:17 UTC
SVN commit 1072775 by rjarosz:

Backport SVN commit 1072688.
Fix bug 202081 - Button 'Read More Info About This Contact' does nothing

CCBUG: 202081


 M  +1 -0      kopeteaddedinfoevent.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1072775