Fix bug 202081 - Button 'Read More Info About This Contact' does nothing

BUG: 202081


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1072688